# bf20_mill

./: .gitattributes  .gitignore  MANIFEST.in  pyproject.toml
bf20_mill/: __init__.py  bf20_mill.py  bf20_mill.qrc  bf20_mill.qss  bf20_mill.ui  bf20_mill.yml  resources.qrc
bf20_mill/widgets/: __init__.py
bf20_mill/widgets/conversational/: facing.py  facing_vertical.ui  hole_circle.ui
bf20_mill_widgets/: __init__.py
bf20_mill_widgets/conversational/: facing.ui  facing_vertical.ui  hole_circle.ui  xy_coord.ui
config/bf20_mill/: bf20_mill.ini
debian/: changelog  control  postinst  rules
dev_launchers/: BF20 Mill.desktop  Designer for BF20 Mill.desktop  bf20_mill_designer.sh  bf20_mill_launcher.sh
widgets/: __init__.py
widgets/conversational/: drill_widget.py  facing.ui  facing_vertical.py  xy_coord.py  xy_coord.ui
